@@ -197,6 +197,7 @@
 #gptofoo escp2-rx500 printer/Epson-Stylus_Photo_RX500
 #gptofoo escp2-rx600 printer/Epson-Stylus_Photo_RX600
 #gptofoo escp2-r800 printer/Epson-Stylus_Photo_R800
+#gptofoo escp2-r1800 printer/Epson-Stylus_Photo_R1800
 #gptofoo escp2-5000 printer/Epson-Stylus_Pro_5000
 #gptofoo escp2-5500 printer/Epson-Stylus_Pro_5500
 #gptofoo escp2-7000 printer/Epson-Stylus_Pro_7000
