@@ -1,5 +1,5 @@
 /*
- * "$Id: print-escp2-data.c,v 1.165 2004/12/14 02:16:50 rlk Exp $"
+ * "$Id: print-escp2-data.c,v 1.166 2005/03/13 21:30:56 rlk Exp $"
  *
  *   Print plug-in EPSON ESC/P2 driver for the GIMP.
  *
@@ -1716,7 +1716,7 @@ const stpi_escp2_printer_t stpi_escp2_model_capabilities[] =
     &standard_quality_list, &new_init_sequence, &je_deinit_sequence,
     NULL
   },
-  /* 64: PM-G800 */
+  /* 64: PM-G800/Stylus Photo R800 */
   {
     (MODEL_VARIABLE_YES | MODEL_COMMAND_2000 | MODEL_GRAYMODE_YES |
      MODEL_ROLLFEED_YES | MODEL_XZEROMARGIN_YES | MODEL_VACUUM_NO |
@@ -1767,6 +1767,24 @@ const stpi_escp2_printer_t stpi_escp2_model_capabilities[] =
     c3pl_pigment_dotsizes, c3pl_pigment_c66_densities, &stpi_escp2_variable_3pl_pigment_c66_drops,
     stpi_escp2_2880_1440dpi_reslist, &stpi_escp2_c64_inkgroup,
     variable_bits, variable_base_res, &default_input_slot_list,
+    &standard_quality_list, &new_init_sequence, &je_deinit_sequence,
+    NULL
+  },
+  /* 67: Stylus Photo R1800 */
+  {
+    (MODEL_VARIABLE_YES | MODEL_COMMAND_2000 | MODEL_GRAYMODE_YES |
+     MODEL_ROLLFEED_YES | MODEL_XZEROMARGIN_YES | MODEL_VACUUM_NO |
+     MODEL_FAST_360_NO | MODEL_SEND_ZERO_ADVANCE_YES |
+     MODEL_SUPPORTS_INK_CHANGE_NO | MODEL_PACKET_MODE_YES |
+     MODEL_PRINT_TO_CD_YES),
+    180, 1, 2, 180, 1, 2, 180, 1, 2, 8,
+    360, 14400, -1, 2880, 1440, 360, 180, 0, 1, 0, 190, 0, 0, 0,
+    INCH(13), INCH(1200), INCH(2), INCH(2),
+    9, 9, 0, 0, 9, 9, 0, 0, 9, 9, 0, 0, 9, 9, 0, 0, 204, 191, 595, 842,
+    4, 15, 0, 0,
+    p1_5pl_dotsizes, p1_5pl_densities, &stpi_escp2_variable_1_5pl_drops,
+    stpi_escp2_superfine_reslist, &stpi_escp2_cmykrb_inkgroup,
+    variable_bits, c1_5_base_res, &cd_cutter_roll_feed_input_slot_list,
     &standard_quality_list, &new_init_sequence, &je_deinit_sequence,
     NULL
   },
