@@ -1081,6 +1081,7 @@ EPSON Stylus Photo R300
 EPSON Stylus Photo RX500
 EPSON Stylus Photo RX600
 EPSON Stylus Photo R800   (Experimental, CMYK only)
+EPSON Stylus Photo R1800  (Experimental, CMYK only)
 EPSON Stylus Pro 5000
 EPSON Stylus Pro 5500
 EPSON Stylus Pro 7000
@@ -1425,6 +1426,7 @@ Epson Stylus Photo R300        escp2-r300      EPSON Stylus Photo R300
 Epson Stylus Photo RX500       escp2-rx500     EPSON Stylus Photo RX500
 Epson Stylus Photo RX600       escp2-rx600     EPSON Stylus Photo RX600
 Epson Stylus Photo R800        escp2-r800      EPSON Stylus Photo R800
+Epson Stylus Photo R1800       escp2-r1800     EPSON Stylus Photo R1800
 Epson Stylus Pro 5000          escp2-5000      EPSON Stylus Pro 5000
 Epson Stylus Pro 5500          escp2-5500      EPSON Stylus Pro 5500
 Epson Stylus Pro 7000          escp2-7000      EPSON Stylus Pro 7000
